# lens

./: .gitignore  .lensignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  install.ps1  install.sh  quality-gate.toml
.github/actions/lens-scan/: action.yml
.github/workflows/: ci.yml  lens-ci.yml  pr-scan.yml  release.yml
.lens/: state.json
examples/: quality-gate.toml
scripts/: build-pr-comment.py  gen_sonar_rules.py
src/: cli.rs  config.rs  main.rs  rating.rs  setup.rs  state.rs  updater.rs
src/.lens/: state.json
src/agent/: client.rs  coverage.rs  dedup.rs  diff.rs  mod.rs  test_runner.rs  watch.rs
src/analyzer/: cognitive.rs  duplication.rs  metrics.rs  mod.rs  parser.rs  sonar_dup.rs  sonar_dup.rs.tmp  taint.rs  tokenize.rs  tokenize_dart.rs  tokenize_go.rs  tokenize_python.rs  tokenize_rust.rs
src/coverage/: cobertura.rs  jacoco.rs  lcov.rs  mod.rs
src/dependency/: lockfile.rs  mod.rs  osv.rs
src/report/: json.rs  mod.rs  terminal.rs
src/rules/: custom.rs  mod.rs  rule_tests.rs  sonar_compat.rs
src/rules/builtin/: camelcase.rs  consistent_type_imports.rs  curly.rs  dart_rules.rs  default_case.rs  go_rules.rs  max_function_complexity.rs  max_function_lines.rs  max_params.rs  mod.rs  no_array_constructor.rs  no_async_promise_executor.rs  no_await_in_loop.rs  no_bitwise.rs  no_buffer_constructor.rs  no_class_assign.rs  no_compare_neg_zero.rs  no_console.rs  no_constant_condition.rs  no_control_regex.rs  no_delete_var.rs  no_div_regex.rs  no_dupe_args.rs  no_dupe_class_members.rs  no_dupe_keys.rs  no_duplicate_case.rs  no_duplicate_imports.rs  no_else_return.rs  no_empty_function.rs  no_empty_interface.rs  no_eqeqeq.rs  (+73 more)
src/scanner/: discovery.rs  language.rs  mod.rs  nosonar.rs  rules.rs
src/util/: mod.rs  path.rs
src/zap/: client.rs  mod.rs
tests/: integration.rs
